# electron

./: ANDROID_SUPPORT_PLAN.md  BUILD.gn  DEPS  filenames.gni
.github/workflows/: build.yml
android/: BUILD.gn  electron_library_loader.cc  shell_manager.cc  shell_manager.h
android/apk/: AndroidManifest.xml.jinja2
android/apk/assets/: renderer.js
android/apk/res/layout/: electron_activity.xml  shell_view.xml
android/apk/res/values/: strings.xml
android/apk/src/org/electronjs/apk/: AssetExtractor.java  ElectronActivity.java  ElectronApplication.java
android/content_shell_resources/layout/: shell_view.xml
android/electron_apk/: AndroidManifest.xml.jinja2
android/electron_apk/assets/: index.html
android/electron_apk/res/layout/: electron_activity.xml
android/electron_apk/src/org/chromium/electron_apk/: ElectronActivity.java  ElectronApplication.java
android/java/src/org/chromium/content_shell/: ElectronShell.java  ElectronShellManager.java  Shell.java  ShellManager.java
android/java/src/org/chromium/electron_shell/: AssetExtractor.java  ElectronShellManager.java
android/java/src/org/electronjs/: ElectronShell.java  ElectronShellManager.java
chromium_src/: BUILD.gn
docs/api/: web-contents.md
patches/chromium/: .patches  refactor_android_electron_port_changes.patch
patches/node/: .patches  android_add_ndk_cpufeatures.patch  android_fix_host_compiler_env.patch  android_update_v8_trap_handler.patch  fix_add_android_support_for_cares_and_libuv.patch
shell/android/: BUILD.gn  electron_jni_registration.cc  gradle.properties  settings.gradle
shell/android/app/: build.gradle
shell/android/app/src/main/: AndroidManifest.xml
shell/android/app/src/main/java/org/electronjs/: ElectronActivity.java
shell/android/app/src/main/jni/: electron_jni.cpp
shell/android/assets/default_app/: index.html
shell/android/java/: AndroidManifest.xml
shell/android/java/res/values/: strings.xml
shell/android/java/res/xml/: file_paths.xml
shell/android/java/src/org/chromium/electron/: ContentViewRenderView.java  ElectronActivity.java  ElectronApplication.java  ElectronFileProvider.java  ElectronWindow.java
shell/app/: electron_main_android.cc
shell/browser/: browser_android.cc  browser_process_impl.cc  browser_process_impl.h  electron_autofill_driver.cc  electron_autofill_driver.h  electron_browser_client.cc  electron_browser_client.h  electron_browser_main_parts.cc  electron_browser_main_parts.h  electron_speech_recognition_manager_delegate.cc  electron_speech_recognition_manager_delegate.h  native_window.cc  native_window.h  native_window_android.cc  native_window_android.h  native_window_mac.h  native_window_mac.mm  native_window_views.cc  native_window_views.h
shell/browser/api/: electron_api_crash_reporter.cc  electron_api_web_contents.cc
shell/browser/osr/: osr_host_display_client.cc  osr_host_display_client.h
shell/browser/plugins/: plugin_utils.cc
shell/browser/ui/: file_dialog_android.cc  message_box_android.cc
shell/browser/ui/webui/: accessibility_ui.cc  accessibility_ui.h
shell/common/: application_info_android.cc  electron_paths.h  language_util_android.cc  logging.cc  logging.h  node_bindings_android.cc  platform_util_android.cc
shell/common/api/: electron_api_url_loader.cc
shell/common/gin_converters/: base_converter.h  std_converter.h
spec/: api-browser-window-spec.ts
