# Copyright 2024 The Electron Authors. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//third_party/jni_zero/jni_zero.gni")
import("//tools/v8_context_snapshot/v8_context_snapshot.gni")

android_library("electron_java") {
  sources = [
    "java/src/org/chromium/electron/ContentViewRenderView.java",
    "java/src/org/chromium/electron/ElectronActivity.java",
    "java/src/org/chromium/electron/ElectronApplication.java",
    "java/src/org/chromium/electron/ElectronFileProvider.java",
    "java/src/org/chromium/electron/ElectronWindow.java",
  ]

  deps = [
    ":electron_jni_headers",
    "//base:base_java",
    "//components/embedder_support/android:view_java",
    "//content/public/android:content_full_java",
    "//content/public/android:content_main_dex_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/androidx:androidx_appcompat_appcompat_java",
    "//third_party/androidx:androidx_core_core_java",
    "//third_party/jni_zero:jni_zero_java",
    "//ui/android:ui_full_java",
  ]

  srcjar_deps = [ ":electron_jni_headers" ]

  # Remove annotation processor for now - we'll use generate_jni instead
  resources_package = "org.chromium.electron"
}

generate_jni("electron_jni_headers") {
  sources = [
    "java/src/org/chromium/electron/ContentViewRenderView.java",
    "java/src/org/chromium/electron/ElectronActivity.java",
    "java/src/org/chromium/electron/ElectronApplication.java",
    "java/src/org/chromium/electron/ElectronWindow.java",
  ]
}

source_set("electron_android_jni") {
  sources = [
    "electron_jni_registration.cc",
  ]
  
  deps = [
    ":electron_jni_headers",
    "//base",
    "//content/public/browser",
  ]
}

android_resources("electron_java_resources") {
  sources = [
    "java/res/values/strings.xml",
    "java/res/xml/file_paths.xml",
    "java/res/mipmap-hdpi/app_icon.png",
    "java/res/mipmap-mdpi/app_icon.png",
    "java/res/mipmap-xhdpi/app_icon.png",
    "java/res/mipmap-xxhdpi/app_icon.png",
  ]
  custom_package = "org.chromium.electron"
}

android_assets("electron_assets") {
  sources = [
    "assets/default_app/index.html",
  ]
}

android_apk("electron_apk") {
  apk_name = "Electron"
  android_manifest = "java/AndroidManifest.xml"
  android_manifest_dep = ":electron_java_resources"
  
  deps = [
    ":electron_assets",
    ":electron_java",
    ":electron_java_resources",
    "//base:base_java",
    "//content/public/android:content_full_java",
    "//electron:electron_lib",
    "//electron:licenses",
    # TODO: Fix packed_resources for Android
    # "//electron:packed_resources",
    "//third_party/icu:icu_assets",
    "//ui/android:ui_full_java",
  ]
  
  # Create shared library from electron_app
  shared_libraries = [ "//electron:electron_app" ]
  
  # Include V8 snapshot if used
  if (use_v8_context_snapshot) {
    deps += [ "//tools/v8_context_snapshot:v8_context_snapshot_assets" ]
  }
}